welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: ':' expected but ')' found.
		def courir(nbPas){
                                ^MethodsPicture:60: error: identifier expected but '}' found.
}
^